--- a/app/styles/components/_container.scss
+++ b/app/styles/components/_container.scss
@@ -7,7 +7,7 @@
 }
 
 .container__header {
-  border-bottom: 1px $light-grey-boarder;
+  border-bottom: 1px solid $light-grey-boarder;
   padding: 1rem;
 
   label {
@@ -20,6 +20,13 @@
   }
 }
 
+.container__message {
+  color: $light-color;
+  margin: 2rem auto;
+  text-align: center;
+}
+
 .container__footer {
+  border-top: 1px solid $light-grey-boarder;
   padding: 1rem 1rem 0 1rem;
 }
