Add actions for firebase login and logout

--- a/app/styles/components/_container.scss
+++ b/app/styles/components/_container.scss
@@ -1,13 +1,13 @@
 .container {
   background: $light-grey;
-  border: 1px solid $light-grey-boarder;
+  border: 1px solid $light-grey-border;
   border-radius: 5px;
   padding: 0;
   margin-bottom: 2rem;
 }
 
 .container__header {
-  border-bottom: 1px solid $light-grey-boarder;
+  border-bottom: 1px solid $light-grey-border;
   padding: 1rem;
 
   label {
@@ -27,6 +27,6 @@
 }
 
 .container__footer {
-  border-top: 1px solid $light-grey-boarder;
+  border-top: 1px solid $light-grey-border;
   padding: 1rem 1rem 0 1rem;
 }
